# thenamelisttool

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  config.py  namadapter.py  pyproject.toml  util.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  lint_test_and_doc.yml
docs/: Makefile  conf.py  index.rst
docs/_templates/autosummary/: custom-module.tpl
src/thenamelisttool/: __init__.py  config.py  namadapter.py  util.py
src/thenamelisttool/entrypoints/: __init__.py  tnt.py  tntcompose.py  tntdiff.py  tntdiffpack.py  tntstack.py
src/thenamelisttool/templates/: tnt-diffpack-output.tpl  tnt-directive.tpl.py  tnt-directive.tpl.yaml
templates/: geo499c1.yaml  namelist_prep_template  tnt-diff-outputdir.tpl  tnt-directive.tpl  tnt-directive.tpl.py  tntcompose-recipe.tpl.yaml  tntstack-directive.tpl.yaml
tests/: test_config.py  test_namadapter.py  test_templates.py
tests/data/: namelist_empty  namelist_obs  namelistmin1312_assim
tests/data/init/: sample.nam_oops
tests/data/ko/: recipe_ko1.yaml  recipe_ko2.yaml  recipe_ko3.yaml  recipe_ko5.yaml  recipe_ko6.yaml  recipe_ko7.yaml
tools/: tnt.py  tntcompose.py  tntdiff.py  tntdiffpack.py  tntstack.py
